[tool.poetry]
name = "multicounter"
version = "0.1.3"
description = "A simple, elegant counter with support for counting multiple things at once."
authors = ["Joseph Hale <me@jhale.dev>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/jhale1805/multicounter"
repository = "https://github.com/jhale1805/multicounter"
documentation = "https://github.com/jhale1805/multicounter"
keywords = [ "counter", "statistics" ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pre-commit = "^3.0.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
