[tool.poetry]
name = "multicounter"
version = "0.2.0"
description = "A simple, elegant counter with support for counting multiple things at once."
authors = ["Joseph Hale <me@jhale.dev>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/thehale/multicounter"
repository = "https://github.com/thehale/multicounter"
documentation = "https://github.com/thehale/multicounter"
keywords = [ "counter", "statistics" ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^7.4"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
